syntax = "proto3";

package user_v1;

option go_package= "proto_sample/internal/user_v1;user_v1";

service UserV1 {
    rpc Get(GetRequest) returns (GetResponse);
  }

message UserInfo {
    int64 id = 1;
    string name = 2;
    bool is_human = 3;
  }

message GetRequest {
    int64 id = 1;
  }

  message GetResponse {
      UserInfo info = 1;
    }
